table design improvement

--- a/ExpenseTracker/Components/Layout/MainLayout.razor
+++ b/ExpenseTracker/Components/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
                 <a href="/" target="_blank">Account</a>
             </div>
         }
-        <article class="content px-4">
+        <article>
             @Body
         </article>
     </main>
