--- a/ExpenseTracker/Components/Pages/Tags.razor.css
+++ b/ExpenseTracker/Components/Pages/Tags.razor.css
@@ -1,30 +1,4 @@
-﻿.chip {
-    display: flex;
-    align-items: center;
-    padding: 5px 15px;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: bold;
-    margin: 5px;
-    width: fit-content;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.chip.cleared {
-    background-color: #ccffcc; 
-    color: #006400; 
-}
-
-
-
-.chip.pending {
-    background-color: #ffcccc; 
-    color: #8b0000; 
-}
-
-
-
-.table {
+﻿.table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
@@ -58,4 +32,3 @@
         margin: 8px 0;
         vertical-align: middle;
     }
-
