--- a/ExpenseTracker/Components/Pages/Dashboard.razor
+++ b/ExpenseTracker/Components/Pages/Dashboard.razor
@@ -8,7 +8,7 @@
 @if (authStateService.IsAuthenticated())
 {
     <div class="p-4">
-        <div class="title">Welcome back, @authStateService.GetAuthenticatedUser().UserName!</div>
+        <div class="heading">Welcome back, @authStateService.GetAuthenticatedUser().UserName!</div>
 
         <!-- Summary Section -->
         <div class="d-flex col-12 gap-3">
@@ -54,15 +54,18 @@
         <div class="d-flex w-100 gap-3 mt-4">
 
         <!-- Pie Chart for Overview -->
-            <MudPaper Class="pa-4 w-50">
-                <div class="title">Financial Overview</div>
-                <MudChart ChartType="ChartType.Pie" InputData="@pieChartData" InputLabels="@pieChartLabels" Width="400px" Height="500px" />
+            <div class="w-50 piechart">
+
+            <MudPaper Class="pa-4">
+                <div class="heading">Financial Overview</div>
+                <MudChart ChartType="ChartType.Pie" InputData="@pieChartData" InputLabels="@pieChartLabels" Width="400px" Height="500px"/>
             </MudPaper>
+        </div>
 
             <!-- Highest and Lowest Transactions -->
             <div class="flex-grow-1">
                 <div class="list">
-                    <div class="title">Highest Transactions</div>
+                    <div class="heading">Highest Transactions</div>
                     <table class="table">
                         <thead>
                             <tr>
@@ -86,7 +89,7 @@
                     </table>
                 </div>
                 <div class="list mt-3">
-                    <div class="title">Lowest Transactions</div>
+                    <div class="heading">Lowest Transactions</div>
                     <table class="table">
                         <thead>
                             <tr>
@@ -114,7 +117,7 @@
 
         <!-- Pending Debts -->
         <div class="mt-4">
-            <div class="title">Pending Debts</div>
+            <div class="heading">Pending Debts</div>
             <table class="table">
                 <thead>
                     <tr>
