--- a/ExpenseTracker/Components/Pages/Transactions.razor.css
+++ b/ExpenseTracker/Components/Pages/Transactions.razor.css
@@ -226,3 +226,12 @@ label {
         margin: 8px 0;
         vertical-align: middle;
     }
+
+
+.no-transactions {
+    text-align: center;
+    color: #7f8c8d;
+    font-style: italic;
+    padding: 12px;
+    font-size: 16px;
+}
