--- a/ExpenseTracker/Components/Layout/MainLayout.razor.css
+++ b/ExpenseTracker/Components/Layout/MainLayout.razor.css
@@ -75,3 +75,11 @@ main {
         padding-right: 1.5rem !important;
     }
 }
+
+.account {
+    font-size: 24px;
+    display: flex;
+    color: #001B2E;
+    gap: 4px;
+    align-items: center;
+}
